# gecl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: circle.rs  collision.rs  color.rs  lib.rs  point.rs  rect.rs  size.rs  vector.rs
