[package]
name = "gecl"
version = "0.0.1"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "Zlib"
description = "geometry types and a color type"
keywords = ["geometry", "color"]
repository = "https://github.com/LNSEAB/gecl"
documentation = "https://docs.rs/gecl"
readme = "README.md"

[dependencies]
num = "0.4.0"
serde = { version = "1.0.125", optional = true, features = ["derive"] }
