[package]
name = "gecl"
version = "0.0.2"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2021"
license = "Zlib"
description = "geometry types and a color type"
keywords = ["geometry", "color"]
repository = "https://github.com/LNSEAB/gecl"
documentation = "https://docs.rs/gecl"
readme = "README.md"

[dependencies]
num = "0.4.0"
serde = { version = "1.0.137", optional = true, features = ["derive"] }

[package.metadata.release]
dev-version = false
pre-release-commit-message = "{{version}}"
